--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,19 +6,19 @@
   --header-height: 3.5rem;
   /*========== Colors ==========*/
   /*Color mode HSL(hue, saturation, lightness)*/
-  --first-color: hsl(93, 54%, 54%);
-  --first-color-alt: hsl(93, 50%, 48%);
-  --first-color-light: hsl(93, 58%, 66%);
+  --first-color: hsl(216, 87%, 70%);
+  --first-color-alt: hsl(216, 83%, 67%);
+  --first-color-light: hsl(216, 58%, 66%);
   --title-color: hsl(228, 8%, 98%);
   --text-color: hsl(228, 8%, 70%);
   --white-color: hsl(228, 8%, 98%);
-  --black-color: hsl(228, 6%, 4%);
+  --black-color: hsl(240, 5%, 4%);
   --body-color: hsl(228, 6%, 8%);
-  --container-color: hsl(228, 6%, 12%);
-  --shadow-img: 0 0 48px hsla(93, 54%, 54%, .4);
+  --container-color: hsl(240, 5%, 12%);
+  --shadow-img: 0 0 48px hsla(216, 60%, 68%, 0.70);
   --gradient-card: linear-gradient(180deg,
-                                hsla(93, 8%, 8%),
-                                hsla(93, 40%, 30%));
+                                hsla(216, 8%, 8%),
+                                hsla(216, 40%, 30%));
 
   /*========== Font and typography ==========*/
   /*.5rem = 8px | 1rem = 16px ...*/
@@ -116,13 +116,95 @@ img {
 }
 
 /*=============== HEADER & NAV ===============*/
+.header{
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: transparent;
+  z-index: var(--z-fixed);
+} 
 
+.nav{
+  position: relative;
+  height: var(--header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+
+}
+
+.nav__logo,
+.nav__close,
+.nav__toggle,
+.nav__actions{
+  display: flex;
+  color: var(--title-color);
+  cursor: pointer;
+}
+
+.nav__logo{
+  font-weight: var(--font-semi-bold);
+  column-gap: .25rem;
+  align-items: center;
+}
+
+.nav__logo i{
+  color: var(--first-color);
+  font-size: 1.25rem;
+  font-weight: initial;
+}
+
+.nav__actions{
+  font-size: 1.25rem;
+  column-gap: .5rem;
+  align-items: center;
+}
 
 /* Navigation for mobile devices */
+@media screen and (max-width: 1150px){
+  .nav__menu{
+    position: fixed;
+    top: 0;
+    right: -100%;
+    background-color: hsla(228, 24%, 66%, .2);
+    backdrop-filter: blur(16px);
+    -webkit-backdrop-filter: blur(16px);
+    width: 80%;
+    height: 100%;
+    padding: 6rem 3rem 0;
+    transition: right .4s;
+  }
+}
 
+.nav__list{
+  display: flex;
+  flex-direction: column;
+  row-gap: 3rem;
+}
 
+.nav__link{
+  color: var(--title-color);
+  font-weight: var(--font-semi-bold);
+  transition: color .4s;
+}
+
+.nav__link:hover{
+  color: var(--first-color);
+}
+
+.nav__close{
+  position: absolute;
+  top: 1.15rem;
+  right: 1.5rem;
+  font-size: 1.25rem;
+}
 /* Show menu */
-
+.show-menu{
+  right: 0;
+}
 
 /* Add blur header */
 
@@ -131,10 +213,79 @@ img {
 
 
 /*=============== HOME ===============*/
+.home__container{
+  padding-top: 2.5rem;
+  row-gap: 2rem;
+}
+
+.home__img{
+  width: 270px;
+  filter: drop-shadow(var(--shadow-img));
+  justify-self: center;
+}
+
+.home__data{
+  text-align: center;
+}
+
+.home__tittle{
+  font-size: var(--biggest-font-size);
+  font-weight: var(--font-bold);
+  margin-bottom: 1rem;
+}
+
+.home__tittle span{
+  color: var(--first-color);
+}
+
+.home__description{
+  margin-bottom: 3rem;
+}
+
+.home__buttons{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: .5rem;
+}
 
 
 /*=============== BUTTON ===============*/
+.button{
+  background-color: var(--white-color);
+  color: var(--black-color);
+  font-weight: var(--font-bold);
+  padding: .5rem 1.5rem .5rem .5rem;
+  border-radius: 4rem;
+  display: inline-flex;
+  align-items: center;
+  column-gap: .75rem;
+}
 
+.button span{
+  background-color: var(--first-color);
+  padding: .5rem;
+  font-size: 1.25rem;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+  transition: transform .4s;
+}
+
+.button:hover span{
+  transform: translateX(.15rem) rotate(-30deg);
+}
+
+.button__link{
+  color: var(--white-color);
+  font-weight: var(--font-bold);
+  text-decoration: underline;
+  transition: color .4s;
+}
+
+.button__link:hover{
+  color: var(--first-color);
+}
 
 /*=============== NEWS ===============*/
 
